--- a/style.css
+++ b/style.css
@@ -1,19 +1,69 @@
 body {
     font-family: monospace;
-    padding: 5%;
+    padding: 4%;
 }
 
 header {
     text-align: center;
 }
 
-footer {
+section {
     margin-top: 45px;
+    padding: 5%;
+}
+
+h1:hover, h2:hover{
+    color: magenta;
+}
+
+h3:hover{
+    color: red;
+}
+
+footer {
     text-align: center;
 }
 
-section {
-    margin-top: 45px;
+#objective {
+    background-color: rgb(206, 255, 206);
+    align-self: auto;
+}
+
+#experience {
+    background-color: rgb(255, 217, 249);
+    justify-self: center;
+    align-self: center;
+}
+
+#education {
+    background-color: beige;
+    justify-self: center;
+    align-self: center;
+}
+
+#interests {
+    background-color: rgb(119, 219, 214);
+    justify-self: auto;
+    align-self: center;
+}
+
+#nav {
+    background-color: aquamarine;
+    text-align: center;
+    justify-self: center;
+    align-self: center;
+}
+
+#photo {
+    text-align: center;
+    justify-self: center;
+    align-self: center;
+    padding: 10%;
+}
+
+#profile {
+    width: 220px;
+    height: 230px;
 }
 
 .place {
@@ -28,10 +78,122 @@ section {
     font-size: 80%; 
 }
 
-#profile {
-    width: 300px;
-    height: 315px;
-    align-self: center;
-    padding: 10px;
-    margin-bottom: 10px;
+#container{
+    display: grid;
+    justify-content: center;
+}
+
+@media (min-width: 600px) and (max-width: 990px){
+    #container {
+        grid-template-columns: 46% 60%;
+        grid-template-rows: repeat(5,auto);
+    }
+
+    header {
+        grid-column-start: 1;
+        grid-column-end: 3;
+        grid-row-start: 1;
+        grid-row-end: 2;
+    }
+
+    #objective {
+        grid-column-start: 1;
+        grid-column-end: 2;
+        grid-row-start: 2;
+        grid-row-end: 3;
+    }
+
+    #education {
+        grid-column-start: 1;
+        grid-column-end: 2;
+        grid-row-start: 3;
+        grid-row-end: 4;
+    }
+
+    #interests{
+        grid-column-start: 1;
+        grid-column-end: 2;
+        grid-row-start: 4;
+        grid-row-end: 5;
+    }
+
+    #photo {
+        grid-column-start: 1;
+        grid-column-end: 2;
+        grid-row-start: 5;
+        grid-row-end: 6;
+    }
+
+    #nav {
+        grid-column-start: 2;
+        grid-column-end: 3;
+        grid-row-start: 5;
+        grid-row-end: 6;
+    }
+
+    #experience {
+        grid-column-start: 2;
+        grid-column-end: 3;
+        grid-row-start: 2;
+        grid-row-end: 5;
+        align-self: auto;
+    }
+}
+
+@media (min-width: 991px){
+    #container {
+        grid-template-columns: 30% 50% 20%;
+        grid-template-rows: repeat(4,auto);
+    }
+
+    header {
+        grid-column-start: 1;
+        grid-column-end: 4;
+        grid-row-start: 1;
+        grid-row-end: 2;
+    }
+
+    #objective {
+        grid-column-start: 1;
+        grid-column-end: 2;
+        grid-row-start: 2;
+        grid-row-end: 3;
+    }
+
+    #education {
+        grid-column-start: 1;
+        grid-column-end: 2;
+        grid-row-start: 3;
+        grid-row-end: 4;
+    }
+
+    #interests{
+        grid-column-start: 1;
+        grid-column-end: 2;
+        grid-row-start: 4;
+        grid-row-end: 5;
+        align-self: auto;
+    }
+
+    #photo {
+        grid-column-start: 3;
+        grid-column-end: 4;
+        grid-row-start: 4;
+        grid-row-end: 5;
+    }
+
+    #nav {
+        grid-column-start: 3;
+        grid-column-end: 4;
+        grid-row-start: 2;
+        grid-row-end: 4;
+    }
+
+    #experience {
+        grid-column-start: 2;
+        grid-column-end: 2;
+        grid-row-start: 2;
+        grid-row-end: 5;
+        align-self: auto;
+    }
 }
